--- a/index.html
+++ b/index.html
@@ -7,5 +7,69 @@
   </head>
   <body>
     <h1>ひさめ</h1>
+    
+    <h2>About</h2>
+    <p>
+      簡単な自己紹介やアピール。<br>
+      どんなことができる、したいのか。
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>ひさめ</li>
+      <li>神奈川県</li>
+      <li>ゲーム好き</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <th>OS</th>
+        <td>Windows11 など</td>
+      </tr>
+      <tr>
+        <th>Engine,</th>
+        <td>Node.js, など</td>
+      </tr>
+      <tr>
+        <th>Tool</th>
+        <td>Github </td>
+      </tr>
+      <tr>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <p>アピールできる活動内容を書きましょう。</p>
+    <ul>
+      <li><a href="https://github.com/">GitHub</a></li>
+      <li><a href="https://qiita.com/">Qiita</a></li>
+      <li><a href="https://zenn.dev/">Zenn</a></li>
+      <li>
+       
+
+    <h3>Contact</h3>
+    <p>連絡先や SNS のアカウントを書きましょう。</p>
+    <ul>
+      <li><a href="https://x.com/ZZZ_JP">X(旧 Twitter)</a></li>
+      <li><a href="https://www.youtube.com/@zzxk4sen">LinkedIn</a></li>
+    </ul>
+
+    <h3>History</h3>
+    <p>学歴、職歴、アルバイト、インターン経験など。</p>
+    <table>
+      <tr>
+        <th>2025 年</th>
+        <td><a ファミリーマート /a> アルバイト</td>
+      </tr>
+      <tr>
+        <th>2025 年</th>
+        <td>学校法人角川ドワンゴ学園 <a href="https://nnn.ed.jp/">N高等学校</a> 卒業</td>
+      </tr>
+      <tr>
+        <th>20XX 年</th>
+        <td>表彰、受賞歴、メディア掲載記事などあれば</td>
+      </tr>
+    </table>
   </body>
 </html>
